<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDF5E6"
    android:orientation="vertical"
    tools:context="com.example.android.musicproject.MainActivity">

    <TextView
        android:id="@+id/home_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/enter_a_type"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/spinner_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:entries="@array/music_genre_array"
        android:prompt="@string/select_genre" />

    <CheckBox
        android:id="@+id/cb_80s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:padding="15dp"
        android:text="@string/_80_s_music"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/cb90s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:padding="15dp"
        android:text="@string/_90_s_music"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/cb2000s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:padding="15dp"
        android:text="@string/_2000_s_music"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_recommend"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:text="@string/button_recommend"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/image_music"
        android:layout_width="match_parent"
        android:layout_height="123dp"
        app:srcCompat="@drawable/music" />
</LinearLayout>
